edit google third party settings

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 load_dotenv()
-CALLBACK_URL_YOU_SET_ON_GOOGLE='http://127.0.0.1:8000/accounts/google/login/callback/'
+CALLBACK_URL_YOU_SET_ON_GOOGLE='http://127.0.0.1:8000/'
