--- a/.env
+++ b/.env
@@ -1,2 +1,14 @@
 load_dotenv()
-CALLBACK_URL_YOU_SET_ON_GOOGLE='http://127.0.0.1:8000/'
+GOOGLE_REDIRECT_URL='http://127.0.0.1:8000/accounts/google/login/callback/'
+
+https://accounts.google.com/o/oauth2/v2/auth?
+redirect_uri=http://127.0.0.1:8000/accounts/google/login/callback/&
+prompt=consent&
+response_type=code&
+client_id=846028824931-57n0hmvhngg1j994t08vmc5h57codb2e.apps.googleusercontent.com&
+scope=openid%20email%20profile&
+access_type=offline
+4/0AVG7fiRi8hwXxPmI4ewU-cK_V3fO8sSG4zf-tB3hzKwu0oPuIoVCjJ6EdVJ6Qr_NCnHPkw
+
+
+
