--- a/requirements.txt
+++ b/requirements.txt
@@ -11,22 +11,32 @@ charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==43.0.1
 daphne==4.1.2
+defusedxml==0.7.1
+dj-rest-auth==6.0.0
 Django==5.1.1
-django-allauth0.61.1
+django-allauth==0.61.1
+django-cors-headers==4.5.0
+django-filter==24.3
+djangorestframework==3.15.2
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
+Markdown==3.7
 msgpack==1.1.0
 oauthlib==3.2.2
+pillow==10.4.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 PyJWT==2.9.0
 pyOpenSSL==24.2.1
+python-dotenv==1.0.1
+python3-openid==3.2.0
 redis==5.1.0
 requests==2.32.3
 requests-oauthlib==2.0.0
 service-identity==24.1.0
+setuptools==75.2.0
 sqlparse==0.5.1
 tomli==2.0.1
 Twisted==24.7.0
@@ -34,10 +44,3 @@ txaio==23.1.1
 typing_extensions==4.12.2
 urllib3==2.2.3
 zope.interface==7.0.3
-Pillow==10.4.0
-python-dotenv==1.0.1
-djangorestframework==3.15.2
-markdown==3.7
-django-filter==24.3
-django-cors-headers==4.5.0
-dj-rest-auth[with_social]==6.0.0
